test/libsolidity/syntaxTests/viewPureChecker/msg_value_modifier_view.sol
contract C {
    modifier m(uint _amount, uint _avail) { require(_avail >= _amount); _; }
    function f() m(1 you, msg.value) public view {}
}
// ----
// TypeError: (116-125): "msg.value" and "callvalue()" can only be used in payable public functions. Make the function "payable" or use an internal function to avoid this error.
